--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "start": "npm run serve",
     "serve": "vue-cli-service serve src/dev.main.js",
-    "build": "vue-cli-service build --target lib --name item-showcase src/build.main.js",
+    "build": "vue-cli-service build --target lib --inline-vue --name item-showcase src/build.main.js",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.11",
