--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
-    "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
+    "sass": "^1.32.8",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
