--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "start": "npm run serve",
-    "serve": "vue-cli-service serve src/dev.main.js",
+    "serve": "vue-cli-service serve src/demo.main.js",
     "build": "vue-cli-service build --target lib --inline-vue --name item-showcase src/build.main.js",
+    "build:demo": "vue-cli-service build --inline-vue --name item-showcase src/demo.main.js",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
